# abstract_algebra

./: pyproject.toml  setup.py
src/abstract_algebra/: finite_algebras.py  test_cayley_table.py  test_finite_algebras.py  test_permutations.py
